--- a/codebase/apps/cidd/src/fix_map/Makefile
+++ b/codebase/apps/cidd/src/fix_map/Makefile
@@ -31,8 +31,6 @@
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_macros
 
-MODULE_TYPE=program
-
 TARGET_FILE = fix_map
 
 LOC_INCLUDES =
@@ -43,14 +41,13 @@ LOC_LIBS = \
 	-lpthread
 
 HDRS =  
-SRCS =  fix_map.c 
+CPPC_SRCS =  fix_map.cc
 
 #
 # standard targets
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_targets
-
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
 
 depend: depend_generic
 
