apps/didss/src/wsi_ingest - converting C to C++ for build

--- a/codebase/apps/didss/src/wsi_ingest/Makefile
+++ b/codebase/apps/didss/src/wsi_ingest/Makefile
@@ -45,10 +45,10 @@ LOC_LIBS = \
 
 HDRS = fs.h
 
-C_SRCS = \
-	$(TDRP_C) \
-	wsiIngest.c \
-	wsi_net_io.c
+CPPC_SRCS = \
+	Params.cc \
+	wsiIngest.cc \
+	wsi_net_io.cc
 
 #
 # tdrp support
@@ -60,7 +60,7 @@ include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_macros
 # standard targets
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c_targets
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
 
 #
 # local targets
@@ -68,7 +68,7 @@ include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c_targets
 
 depend: $(TDRP_C) depend_generic
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_targets
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_c++_targets
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
