--- a/codebase/apps/ingest/src/MetarCsv2Spdb/Makefile
+++ b/codebase/apps/ingest/src/MetarCsv2Spdb/Makefile
@@ -35,9 +35,9 @@ include $(LROSE_CORE_DIR)/build/make_include/lrose_make_macros
 
 LOC_INCLUDES = $(NETCDF4_INCS)
 
-LOC_LIBS = -lSpdb -ldsserver -ldidss -lrapformats \
-	-ltoolsa -lpthread -ldataport -ltdrp $(NETCDF4_LIBS) \
-	-lbz2 -lz
+LOC_LIBS = -lSpdb -lrapformats -ldsserver -ldidss \
+	-lphysics -leuclid -lrapmath -ltoolsa -ldataport -ltdrp \
+	$(NETCDF4_LIBS) -lpthread
 
 LOC_LDFLAGS = $(NETCDF4_LDFLAGS)
 
