apps/procmap/src - procmap_register, procmap_unregister, test_procmap - converting C to C++

--- a/codebase/apps/procmap/src/procmap_unregister/Makefile
+++ b/codebase/apps/procmap/src/procmap_unregister/Makefile
@@ -44,15 +44,15 @@ TARGET_FILE = procmap_unregister
 
 HDRS =
 
-SRCS = \
-	parse_args.c \
-	procmap_unregister.c
+CPPC_SRCS = \
+	parse_args.cc \
+	procmap_unregister.cc
 
 #
 # general targets
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c_targets
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
 
 #
 # local targets
