--- a/codebase/apps/procmap/src/procmap/CMakeLists.txt
+++ b/codebase/apps/procmap/src/procmap/CMakeLists.txt
@@ -54,47 +54,11 @@ include_directories (../../../../libs/tdrp/src/include)
 include_directories (../../../../libs/titan/src/include)
 include_directories (../../../../libs/toolsa/src/include)
 include_directories (${CMAKE_INSTALL_PREFIX}/include)
-if (DEFINED netCDF_INSTALL_PREFIX)
-  include_directories (${netCDF_INSTALL_PREFIX}/include)
-endif()
-if (DEFINED HDF5_C_INCLUDE_DIR)
-  include_directories (${HDF5_C_INCLUDE_DIR})
-endif()
-if(IS_DIRECTORY /usr/include/hdf5/serial)
-  include_directories (/usr/include/hdf5/serial)
-endif()
-if(IS_DIRECTORY /usr/local/include)
-  include_directories (/usr/local/include)
-endif()
-# NOTE: cannot add /usr/include using include_directories()
-add_compile_options(-I/usr/include)
-
+include_directories (${MAMBA_INCLUDE_PATH})
 # link directories
 
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
-if (DEFINED netCDF_INSTALL_PREFIX)
-  link_directories (${netCDF_INSTALL_PREFIX}/lib)
-endif()
-if (DEFINED HDF5_INSTALL_PREFIX)
-  link_directories (${HDF5_INSTALL_PREFIX}/lib)
-endif()
-if (DEFINED HDF5_LIBRARY_DIRS)
-  link_directories(${HDF5_LIBRARY_DIRS})
-endif()
-# add serial, for odd Debian hdf5 install
-if(IS_DIRECTORY /usr/lib/x86_64-linux-gnu/hdf5/serial)
-  link_directories(/usr/lib/x86_64-linux-gnu/hdf5/serial)
-endif()
-if(IS_DIRECTORY /usr/local/lib)
-  link_directories (/usr/local/lib)
-endif()
-if(IS_DIRECTORY /usr/lib64)
-  link_directories (/usr/lib64)
-endif()
-if(IS_DIRECTORY /usr/lib)
-  link_directories (/usr/lib)
-endif()
-
+link_directories (${MAMBA_LIBRARY_PATH})
 if(${CMAKE_VERSION} VERSION_GREATER "3.13.0")
   add_link_options( -L${CMAKE_INSTALL_PREFIX}/lib )
 endif()
