--- a/codebase/apps/titan/src/bearing2latlon/Makefile
+++ b/codebase/apps/titan/src/bearing2latlon/Makefile
@@ -42,23 +42,39 @@ LOC_LDFLAGS =
 LOC_LIBS = \
 	-ltoolsa -ldataport -ltdrp -lpthread -lbz2 -lz -lm
 
-HDRS = bearing2latlon.h
+HDRS = Params.hh
 
-SRCS = \
-	bearing2latlon_tdrp.c \
-	bearing2latlon.c \
-	filter.c \
-	parse_args.c \
-	tidy_and_exit.c
+CPPC_SRCS = \
+	Params.cc \
+	bearing2latlon.cc \
+	filter.cc \
+	parse_args.cc \
+	tidy_and_exit.cc
 
 #
-# standard targets
+# tdrp macros
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c_targets
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_macros
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_targets
+
+#
+# standard C++ targets
+#
+
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
+
+#
+# tdrp targets
+#
+
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_c++_targets
+
+#
+# local targets
+#
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+
+
 
 
