apps/titan/storms_to_ascii, storms_to_tifs - converting to C++ build

--- a/codebase/apps/titan/src/storms_to_ascii/Makefile
+++ b/codebase/apps/titan/src/storms_to_ascii/Makefile
@@ -50,17 +50,17 @@ LOC_CFLAGS =
 
 MODULE_TYPE=program
 
-HDRS = storms_to_ascii.h
+HDRS = storms_to_ascii.hh
 
-SRCS = \
-	init_indices.c \
-	load_scan_times.c \
-	open_files.c \
-	parse_args.c \
-	print_comments.c \
-	process_track_file.c \
-	storms_to_ascii.c \
-	tidy_and_exit.c
+CPPC_SRCS = \
+	init_indices.cc \
+	load_scan_times.cc \
+	open_files.cc \
+	parse_args.cc \
+	print_comments.cc \
+	process_track_file.cc \
+	storms_to_ascii.cc \
+	tidy_and_exit.cc
 
 #
 # standard targets
