apps/radar/titan - modifying legacy apps test_tserver, track_print, verify_day, verify_grid and verify_tracks to compile as C++ instead of C

--- a/codebase/apps/titan/src/test_tserver/Makefile
+++ b/codebase/apps/titan/src/test_tserver/Makefile
@@ -47,10 +47,8 @@ LOC_LIBS = \
 
 MODULE_TYPE=program
 
-HDRS = test_tserver.h
-
-SRCS = \
-	test_tserver.c
+CPPC_SRCS = \
+	test_tserver.cc
 
 #
 # standard targets
