--- a/codebase/apps/titan/src/verify_day/CMakeLists.txt
+++ b/codebase/apps/titan/src/verify_day/CMakeLists.txt
@@ -14,17 +14,17 @@ project (verify_day)
 # source files
 
 set (SRCS
-      init_indices.c
-      load_cont_data.c
-      load_scan_times.c
-      open_files.c
-      parse_args.c
-      read_params.c
-      read_verification_file.c
-      tidy_and_exit.c
-      update_ellipse_grid.c
-      update_runs_grid.c
-      verify_day.c
+      init_indices.cc
+      load_cont_data.cc
+      load_scan_times.cc
+      open_files.cc
+      parse_args.cc
+      read_params.cc
+      read_verification_file.cc
+      tidy_and_exit.cc
+      update_ellipse_grid.cc
+      update_runs_grid.cc
+      verify_day.cc
     )
 
 # include directories
@@ -61,11 +61,47 @@ include_directories (../../../../libs/tdrp/src/include)
 include_directories (../../../../libs/titan/src/include)
 include_directories (../../../../libs/toolsa/src/include)
 include_directories (${CMAKE_INSTALL_PREFIX}/include)
-include_directories (${MAMBA_INCLUDE_PATH})
+if (DEFINED netCDF_INSTALL_PREFIX)
+  include_directories (${netCDF_INSTALL_PREFIX}/include)
+endif()
+if (DEFINED HDF5_C_INCLUDE_DIR)
+  include_directories (${HDF5_C_INCLUDE_DIR})
+endif()
+if(IS_DIRECTORY /usr/include/hdf5/serial)
+  include_directories (/usr/include/hdf5/serial)
+endif()
+if(IS_DIRECTORY /usr/local/include)
+  include_directories (/usr/local/include)
+endif()
+# NOTE: cannot add /usr/include using include_directories()
+add_compile_options(-I/usr/include)
+
 # link directories
 
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
-link_directories (${MAMBA_LIBRARY_PATH})
+if (DEFINED netCDF_INSTALL_PREFIX)
+  link_directories (${netCDF_INSTALL_PREFIX}/lib)
+endif()
+if (DEFINED HDF5_INSTALL_PREFIX)
+  link_directories (${HDF5_INSTALL_PREFIX}/lib)
+endif()
+if (DEFINED HDF5_LIBRARY_DIRS)
+  link_directories(${HDF5_LIBRARY_DIRS})
+endif()
+# add serial, for odd Debian hdf5 install
+if(IS_DIRECTORY /usr/lib/x86_64-linux-gnu/hdf5/serial)
+  link_directories(/usr/lib/x86_64-linux-gnu/hdf5/serial)
+endif()
+if(IS_DIRECTORY /usr/local/lib)
+  link_directories (/usr/local/lib)
+endif()
+if(IS_DIRECTORY /usr/lib64)
+  link_directories (/usr/lib64)
+endif()
+if(IS_DIRECTORY /usr/lib)
+  link_directories (/usr/lib)
+endif()
+
 if(${CMAKE_VERSION} VERSION_GREATER "3.13.0")
   add_link_options( -L${CMAKE_INSTALL_PREFIX}/lib )
 endif()
