--- a/codebase/apps/titan/src/verify_tracks/CMakeLists.txt
+++ b/codebase/apps/titan/src/verify_tracks/CMakeLists.txt
@@ -14,29 +14,29 @@ project (verify_tracks)
 # source files
 
 set (SRCS
-      compute_contingency_data.c
-      compute_errors.c
-      compute_lookup.c
-      compute_stats.c
-      debug_print.c
-      find_last_descendant.c
-      increment_count.c
-      init_indices.c
-      load_file_stats.c
-      load_grid.c
-      load_props.c
-      load_scan_times.c
-      open_files.c
-      parse_args.c
-      perform_verification.c
-      print_contingency_table.c
-      print_stats.c
-      read_params.c
-      save_verification_parameters.c
-      set_counts_to_longs.c
-      tidy_and_exit.c
-      triangle_points.c
-      verify_tracks.c
+      compute_contingency_data.cc
+      compute_errors.cc
+      compute_lookup.cc
+      compute_stats.cc
+      debug_print.cc
+      find_last_descendant.cc
+      increment_count.cc
+      init_indices.cc
+      load_file_stats.cc
+      load_grid.cc
+      load_props.cc
+      load_scan_times.cc
+      open_files.cc
+      parse_args.cc
+      perform_verification.cc
+      print_contingency_table.cc
+      print_stats.cc
+      read_params.cc
+      save_verification_parameters.cc
+      set_counts_to_longs.cc
+      tidy_and_exit.cc
+      triangle_points.cc
+      verify_tracks.cc
     )
 
 # include directories
