--- a/codebase/apps/scripts/CMakeLists.txt
+++ b/codebase/apps/scripts/CMakeLists.txt
@@ -8,7 +8,7 @@
 #
 ###############################################################
 
-project (LROSE-CORE)
+project (lrose-core)
 
 # subdirectories
 
