build/cmake/createCMakeLists.py - for MAMBA_BUILD do not search for packages

--- a/codebase/apps/radar/src/HawkEye/CMakeLists.txt
+++ b/codebase/apps/radar/src/HawkEye/CMakeLists.txt
@@ -63,6 +63,7 @@ set (SRCS
       TimeScaleWidget.cc
     )
 
+if (NOT DEFINED MAMBA_BUILD)
 #Finding Qt
 find_package (Qt6 COMPONENTS Core QUIET)
 if (NOT Qt6_FOUND)
@@ -76,32 +77,29 @@ else ()
   message(FATAL_ERROR, "Qt not found.")
 endif(Qt5_FOUND)
 if(APPLE)
-  if (DEFINED MAMBA_BUILD)
-# MAMBA builds ignore system libs, use mamba libs
-    if (Qt5_FOUND)
-      find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
-    elseif (Qt6_FOUND)
-      find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
-    endif(Qt5_FOUND)
-  else()
-    if (Qt5_FOUND)
-      find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
-    elseif (Qt6_FOUND)
-      find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
-    endif(Qt5_FOUND)
-  endif(DEFINED MAMBA_BUILD)
+  if (Qt5_FOUND)
+    find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+  elseif (Qt6_FOUND)
+    find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+  endif(Qt5_FOUND)
+else()
+  if (Qt5_FOUND)
+    find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
+  elseif (Qt6_FOUND)
+    find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
+  endif(Qt5_FOUND)
 endif(APPLE)
+endif(NOT DEFINED MAMBA_BUILD)
 set (CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_AUTOMOC ON)
 set (CMAKE_AUTORCC ON)
 set (CMAKE_AUTOUIC ON)
+if (NOT DEFINED MAMBA_BUILD)
 if (Qt5_FOUND)
-#QT5
-  if (DEFINED MAMBA_BUILD)
-    find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
-  else()
-    find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
-  endif(DEFINED MAMBA_BUILD)
+#   QT5
+#  find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+#else()
+  find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
   pkg_search_module(Qt5Core REQUIRED)
   pkg_search_module(Qt5Gui REQUIRED)
   pkg_search_module(Qt5Widgets REQUIRED)
@@ -109,17 +107,18 @@ if (Qt5_FOUND)
   pkg_search_module(Qt5Qml REQUIRED)
 else()
 #QT6
-  if (DEFINED MAMBA_BUILD)
-    find_package (Qt6 COMPONENTS Widgets Network Qml REQUIRED PATHS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
-  else()
-    find_package (Qt6 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
-  endif(DEFINED MAMBA_BUILD)
+#  if (DEFINED MAMBA_BUILD)
+#    find_package (Qt6 COMPONENTS Widgets Network Qml REQUIRED PATHS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+#  else()
+  find_package (Qt6 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
+#  endif(DEFINED MAMBA_BUILD)
   pkg_search_module(Qt6Core REQUIRED)
   pkg_search_module(Qt6Gui REQUIRED)
   pkg_search_module(Qt6Widgets REQUIRED)
   pkg_search_module(Qt6Network REQUIRED)
   pkg_search_module(Qt6Qml REQUIRED)
 endif(Qt5_FOUND)
+endif(NOT DEFINED MAMBA_BUILD)
 
 # include directories
 
