--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -48,11 +48,11 @@ endif()
 
 if (DEFINED MAMBA_BUILD)
 # MAMBA builds ignore system includes and libs, use mamba dirs
-set(MAMBA_INCLUDE_PATH ${MINIFORGE_ROOT}/include)
-set(MAMBA_LIBRARY_PATH ${MINIFORGE_ROOT}/lib)
-set(QT_HOST_PATH ${MINIFORGE_ROOT})
-set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)
-set(CMAKE_SYSTEM_IGNORE_PREFIX_PATH "/usr;/usr/local;/usr/lib64;/lib;/lib64;/opt/homebrew")
+  set(MAMBA_INCLUDE_PATH ${MINIFORGE_ROOT}/include)
+  set(MAMBA_LIBRARY_PATH ${MINIFORGE_ROOT}/lib)
+  set(QT_HOST_PATH ${MINIFORGE_ROOT})
+  set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)
+  set(CMAKE_SYSTEM_IGNORE_PREFIX_PATH "/usr;/usr/local;/usr/lib64;/lib;/lib64;/opt/homebrew")
 endif(DEFINED MAMBA_BUILD)
 
 find_package (X11)
@@ -60,8 +60,6 @@ if (DEFINED X11_X11_LIB)
   get_filename_component(X11_LIB_DIR ${X11_X11_LIB} DIRECTORY)
 endif()
 
-if (NOT DEFINED MAMBA_BUILD)
-# MAMBA builds ignore system libs, use mamba libs
 # Finding Qt
 
 find_package (Qt6 COMPONENTS Core QUIET)
@@ -77,19 +75,21 @@ else ()
 endif(Qt5_FOUND)
 
 if(APPLE)
-  if (Qt5_FOUND)
-    find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
-  elseif (Qt6_FOUND)
-    find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
-  endif(Qt5_FOUND)
-else ()
-  if (Qt5_FOUND)
-    find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
-  elseif (Qt6_FOUND)
-    find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
-  endif(Qt5_FOUND)
+  if (DEFINED MAMBA_BUILD)
+# MAMBA builds ignore system libs, use mamba libs
+    if (Qt5_FOUND)
+      find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+    elseif (Qt6_FOUND)
+      find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+    endif(Qt5_FOUND)
+  else ()
+    if (Qt5_FOUND)
+      find_path(Qt5_DIR NAMES Qt5Config.cmake qt5-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt5 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt5 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt5 NO_DEFAULT_PATH)
+    elseif (Qt6_FOUND)
+      find_path(Qt6_DIR NAMES Qt6Config.cmake qt6-config.cmake HINTS /usr/local/Cellar/qt/*/lib/cmake/Qt6 /opt/homebrew/Cellar/qt/*/lib/cmake/Qt6 $ENV{HOME}/homebrew/Cellar/qt/*/lib/cmake/Qt6 NO_DEFAULT_PATH)
+    endif(Qt5_FOUND)
+  endif(DEFINED MAMBA_BUILD)
 endif(APPLE)
-endif(NOT DEFINED MAMBA_BUILD)
 
 find_package (HDF5)
 
