--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -27,6 +27,22 @@ set(CMAKE_CXX_COMPILER_NAMES clang++ g++ icpc c++ cxx FCC CC)
 set(CMAKE_IGNORE_PREFIX_PATH "$ENV{HOME}/anaconda3;$ENV{HOME}/anaconda2")
 message("CMAKE_IGNORE_PREFIX_PATH: ${CMAKE_IGNORE_PREFIX_PATH}")
 
+message("CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}") 
+message("CONDA_PREFIX: ${CONDA_PREFIX}") 
+message("CMAKE_FIND_ROOT_PATH: ${CMAKE_FIND_ROOT_PATH}") 
+message("CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}") 
+message("CONDA_BUILD: ${CONDA_BUILD}") 
+message("CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}") 
+message("CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}") 
+message("CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}") 
+message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}") 
+message("CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}") 
+message("PKG_CONFIG_PATH: ${PKG_CONFIG_PATH}") 
+message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}") 
+message("CMAKE_LIBRARIES: ${CMAKE_LIBRARIES}") 
+message("CMAKE_INCLUDE_PATH: ${CMAKE_INCLUDE_PATH}") 
+message("CONDA_BUILD_SYSROOT: ${CONDA_BUILD_SYSROOT}") 
+
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../build/cmake/"
