--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -42,6 +42,10 @@ message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 message("CMAKE_LIBRARIES: ${CMAKE_LIBRARIES}") 
 message("CMAKE_INCLUDE_PATH: ${CMAKE_INCLUDE_PATH}") 
 message("CONDA_BUILD_SYSROOT: ${CONDA_BUILD_SYSROOT}") 
+message("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}") 
+message("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}") 
+message("QT_ADDITIONAL_PACKAGES_PREFIX_PATH: ${QT_ADDITIONAL_PACKAGES_PREFIX_PATH}") 
+message("Qt6_FOUND: ${Qt6_FOUND}") 
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
