--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -45,7 +45,7 @@ message("CONDA_BUILD_SYSROOT: ${CONDA_BUILD_SYSROOT}")
 message("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}") 
 message("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}") 
 message("QT_ADDITIONAL_PACKAGES_PREFIX_PATH: ${QT_ADDITIONAL_PACKAGES_PREFIX_PATH}") 
-message("Qt6_FOUND: ${Qt6_FOUND}") 
+message("2222222222222 Qt6_FOUND: ${Qt6_FOUND}") 
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
@@ -93,6 +93,8 @@ elseif (Qt6_FOUND)
 else ()
   message(FATAL_ERROR, "Qt not found.")
 endif(Qt5_FOUND)
+
+message("333333333333 Qt6_FOUND: ${Qt6_FOUND}") 
 
 if(APPLE)
   if (DEFINED MAMBA_BUILD)
