Mac OSX test for conda build. Commenting out find_path() for qt6

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -72,9 +72,9 @@ if (DEFINED MAMBA_BUILD)
   set(MAMBA_LIBRARY_PATH ${MINIFORGE_ROOT}/lib)
   set(QT_HOST_PATH ${MINIFORGE_ROOT}) 
   set(CMAKE_SYSTEM_IGNORE_PREFIX_PATH "/usr;/usr/local;/usr/lib64;/lib;/lib64;/opt/homebrew") 
-  if (NOT APPLE)
+#  if (NOT APPLE)
     set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE) 
-  endif()
+#  endif()
 endif(DEFINED MAMBA_BUILD)
 
 find_package (X11)
