Mac OSX test for conda build. Commenting out find_path() for qt6

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -119,12 +119,40 @@ if(APPLE)
   endif(DEFINED MAMBA_BUILD)
 endif(APPLE)
 
+message("aaaaaaaaaaaaaaaaaaaaaaaaaaa") 
+
+if (Qt5_FOUND)
+#QT5
+  if (DEFINED MAMBA_BUILD)
+    find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+  else()
+    find_package (Qt5 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
+  endif(DEFINED MAMBA_BUILD)
+  pkg_search_module(Qt5Core REQUIRED)
+  pkg_search_module(Qt5Gui REQUIRED)
+  pkg_search_module(Qt5Widgets REQUIRED)
+  pkg_search_module(Qt5Network REQUIRED)
+  pkg_search_module(Qt5Qml REQUIRED)
+else()
+#QT6
+  if (DEFINED MAMBA_BUILD)
+    find_package (Qt6 COMPONENTS Widgets Network Qml REQUIRED PATHS ${MINIFORGE_ROOT} NO_DEFAULT_PATH)
+  else()
+    find_package (Qt6 COMPONENTS Widgets Network Qml REQUIRED PATHS /usr /usr/local/opt/qt NO_DEFAULT_PATH)
+  endif(DEFINED MAMBA_BUILD)
+  pkg_search_module(Qt6Core REQUIRED)
+  pkg_search_module(Qt6Gui REQUIRED)
+  pkg_search_module(Qt6Widgets REQUIRED)
+  pkg_search_module(Qt6Network REQUIRED)
+  pkg_search_module(Qt6Qml REQUIRED)
+endif(Qt5_FOUND)
+
 if (DEFINED MAMBA_BUILD)
   set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE) 
   message("666666666666666666666666 set(CMAKE_FIND_USE_CMAKE_SYSTEM_PATH FALSE)") 
  endif(DEFINED MAMBA_BUILD)
 
-find_package (HDF5)
+ find_package (HDF5)
 
 # find_package (NETCDF)
 # find_package (LROSE)
